--- a/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
+++ b/iOS Project/Day Start/Day Start/Base.lproj/Main.storyboard
@@ -12,38 +12,13 @@
         <!--Wheather-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Day_Start" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WeatherViewController" id="BYZ-38-t0r" customClass="WeatherViewController" customModule="Day_Start" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seoul" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNb-pA-22F">
-                                <rect key="frame" x="107" y="84" width="200" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="NZR-lT-XgN"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="33"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Udq-eL-xTz">
-                                <rect key="frame" x="127" y="159" width="160" height="140"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="160" id="J18-a8-dEC"/>
-                                    <constraint firstAttribute="height" constant="140" id="Rf2-bB-m4S"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="영하3도" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b2I-EL-Qv9">
-                                <rect key="frame" x="172" y="314" width="70" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="aRQ-tY-RJP"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scy-ed-3sP">
-                                <rect key="frame" x="0.0" y="358" width="414" height="200"/>
+                                <rect key="frame" x="0.0" y="321" width="414" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="JsM-ga-QY7"/>
                                 </constraints>
@@ -52,37 +27,40 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRd-tG-j69">
-                                <rect key="frame" x="0.0" y="558" width="414" height="256"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="256" id="O9M-0t-xjG"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="541" width="414" height="272"/>
                                 <connections>
                                     <segue destination="iP5-xX-vWI" kind="embed" identifier="daily" id="How-VQ-CSN"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="khg-5A-s6v">
+                                <rect key="frame" x="0.0" y="44" width="414" height="257"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="257" id="vO9-cf-doB"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="ZTI-s8-rZk" kind="embed" identifier="current" id="01D-sA-nJP"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Udq-eL-xTz" firstAttribute="top" secondItem="gNb-pA-22F" secondAttribute="bottom" constant="35" id="1oN-Ss-3d2"/>
                             <constraint firstItem="NRd-tG-j69" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AHx-s0-fsu"/>
-                            <constraint firstItem="Scy-ed-3sP" firstAttribute="top" secondItem="b2I-EL-Qv9" secondAttribute="bottom" constant="20" id="L2C-Zp-NZO"/>
+                            <constraint firstItem="khg-5A-s6v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Eez-ud-0r3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="khg-5A-s6v" secondAttribute="trailing" id="KiC-ac-6gA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Scy-ed-3sP" secondAttribute="trailing" id="MwU-6Y-Y8p"/>
                             <constraint firstItem="Scy-ed-3sP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="N3d-Q8-KtE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NRd-tG-j69" secondAttribute="trailing" id="NOp-ff-x9y"/>
-                            <constraint firstItem="b2I-EL-Qv9" firstAttribute="top" secondItem="Udq-eL-xTz" secondAttribute="bottom" constant="15" id="bRB-1h-rY0"/>
-                            <constraint firstItem="gNb-pA-22F" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bq2-TD-r5o"/>
-                            <constraint firstItem="b2I-EL-Qv9" firstAttribute="centerX" secondItem="Udq-eL-xTz" secondAttribute="centerX" id="ePT-s3-clx"/>
-                            <constraint firstItem="Udq-eL-xTz" firstAttribute="centerX" secondItem="gNb-pA-22F" secondAttribute="centerX" id="mQP-Oz-xjT"/>
-                            <constraint firstItem="NRd-tG-j69" firstAttribute="top" secondItem="Scy-ed-3sP" secondAttribute="bottom" id="mq6-e0-zU3"/>
-                            <constraint firstItem="gNb-pA-22F" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="nno-5S-xpn"/>
+                            <constraint firstItem="khg-5A-s6v" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RlA-tw-K6A"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NRd-tG-j69" secondAttribute="bottom" id="e5O-Qw-Pdq"/>
+                            <constraint firstItem="Scy-ed-3sP" firstAttribute="top" secondItem="khg-5A-s6v" secondAttribute="bottom" constant="20" id="fTC-B9-LQQ"/>
+                            <constraint firstItem="NRd-tG-j69" firstAttribute="top" secondItem="Scy-ed-3sP" secondAttribute="bottom" constant="20" id="mq6-e0-zU3"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Wheather" selectedImage="sun.min.fill" catalog="system" id="XuA-8P-OpF"/>
                     <connections>
-                        <outlet property="currentTempLabel" destination="b2I-EL-Qv9" id="o93-6Y-ull"/>
-                        <outlet property="currentTimezoneLabel" destination="gNb-pA-22F" id="Gg1-Og-8FA"/>
-                        <outlet property="currentWeatherImage" destination="Udq-eL-xTz" id="eGi-MQ-7tq"/>
+                        <outlet property="currentContainerView" destination="khg-5A-s6v" id="RKT-XI-Y9T"/>
+                        <outlet property="dailyContainerView" destination="NRd-tG-j69" id="GSZ-bX-gcH"/>
                         <outlet property="hourlyContainerView" destination="Scy-ed-3sP" id="vmV-gI-bdF"/>
                     </connections>
                 </viewController>
@@ -275,7 +253,7 @@
             <objects>
                 <viewController id="iP5-xX-vWI" customClass="DailyViewController" customModule="Day_Start" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BTm-v5-aaX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="272"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3U1-6K-Ofc">
@@ -493,6 +471,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wT4-u6-Qgj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2210.144927536232" y="1287.7232142857142"/>
+        </scene>
+        <!--Current View Controller-->
+        <scene sceneID="qsI-6x-v0P">
+            <objects>
+                <viewController storyboardIdentifier="CurrentViewController" id="ZTI-s8-rZk" customClass="CurrentViewController" customModule="Day_Start" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="87t-ui-SPc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="257"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="경기도 광주시" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0Q-mI-ui3">
+                                <rect key="frame" x="33.5" y="25" width="93" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ep7-dk-r5n">
+                                <rect key="frame" x="20" y="56" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="Ouh-Kd-IZZ"/>
+                                    <constraint firstAttribute="height" constant="120" id="t68-yM-hUe"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20*C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o6m-fE-gfg">
+                                <rect key="frame" x="45" y="191" width="70" height="34"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feels like : 20*C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bRv-fc-S9Z">
+                                <rect key="frame" x="222" y="49" width="141" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Humidity : 100 %" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BUn-ku-IVO">
+                                <rect key="frame" x="222" y="88" width="149" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind speed : 10 m/s" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XN3-Dx-Mja">
+                                <rect key="frame" x="222" y="166" width="177" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clouds : 100 %" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfX-kw-rqh">
+                                <rect key="frame" x="222" y="127" width="132" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="o6m-fE-gfg" firstAttribute="top" secondItem="ep7-dk-r5n" secondAttribute="bottom" constant="15" id="1HL-5v-RzE"/>
+                            <constraint firstItem="BfX-kw-rqh" firstAttribute="top" secondItem="BUn-ku-IVO" secondAttribute="bottom" constant="15" id="1gk-DM-tn6"/>
+                            <constraint firstItem="s0Q-mI-ui3" firstAttribute="centerX" secondItem="ep7-dk-r5n" secondAttribute="centerX" id="RJo-Ln-nu6"/>
+                            <constraint firstItem="s0Q-mI-ui3" firstAttribute="top" secondItem="87t-ui-SPc" secondAttribute="top" constant="25" id="TXD-YJ-hkr"/>
+                            <constraint firstItem="bRv-fc-S9Z" firstAttribute="leading" secondItem="BUn-ku-IVO" secondAttribute="leading" id="Th1-Us-gHh"/>
+                            <constraint firstItem="BUn-ku-IVO" firstAttribute="top" secondItem="bRv-fc-S9Z" secondAttribute="bottom" constant="15" id="U1A-Mx-FjI"/>
+                            <constraint firstItem="ep7-dk-r5n" firstAttribute="leading" secondItem="87t-ui-SPc" secondAttribute="leading" constant="20" symbolic="YES" id="Yll-WG-t1H"/>
+                            <constraint firstItem="ep7-dk-r5n" firstAttribute="top" secondItem="s0Q-mI-ui3" secondAttribute="bottom" constant="10" id="dvb-bg-ovh"/>
+                            <constraint firstAttribute="bottom" secondItem="XN3-Dx-Mja" secondAttribute="bottom" constant="67" id="fxR-o5-40Z"/>
+                            <constraint firstItem="BUn-ku-IVO" firstAttribute="leading" secondItem="BfX-kw-rqh" secondAttribute="leading" id="jlz-0T-VnJ"/>
+                            <constraint firstItem="XN3-Dx-Mja" firstAttribute="top" secondItem="BfX-kw-rqh" secondAttribute="bottom" constant="15" id="pnS-Xq-1oX"/>
+                            <constraint firstItem="o6m-fE-gfg" firstAttribute="centerX" secondItem="ep7-dk-r5n" secondAttribute="centerX" id="rUV-ZO-vLS"/>
+                            <constraint firstItem="XN3-Dx-Mja" firstAttribute="leading" secondItem="87t-ui-SPc" secondAttribute="leading" constant="222" id="t3t-Yo-xpV"/>
+                            <constraint firstItem="BfX-kw-rqh" firstAttribute="leading" secondItem="XN3-Dx-Mja" secondAttribute="leading" id="yZi-jr-raE"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4iU-5E-Uy4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-500.00000000000006" y="1001.4508928571428"/>
         </scene>
     </scenes>
     <resources>
